--- a/iot project test/my-app/src/index.css
+++ b/iot project test/my-app/src/index.css
@@ -1,7 +1,11 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+  height: 100vh;
+  width: 100vw;
+  margin: 0rem;
+  overflow: hidden;
+}
+
+div{
+	object-position: center;
+	position: relative;
 }
